# src/modules/accounts/entities/User.ts
@@ -1,14 +1,29 @@
 import { Column, CreateDateColumn, Entity, PrimaryColumn } from "typeorm";
 import { v4 as uuidV4 } from "uuid";
 
-@Entity("specifications")
-class Specification {
+@Entity("users")
+class User {
   @PrimaryColumn()
-  id?: string;
+  id: string;
+
   @Column()
   name: string;
+
   @Column()
-  description: string;
+  username: string;
+
+  @Column()
+  email: string;
+
+  @Column()
+  password: string;
+
+  @Column()
+  drive_license: string;
+
+  @Column()
+  isAdmin: boolean;
+
   @CreateDateColumn()
   created_at: Date;
 
@@ -19,4 +34,4 @@ class Specification {
   }
 }
 
-export { Specification };
+export { User };
